update the gitiginore file

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@
 target/
 dbt_packages/
 logs/
+
+
+.env
+profiles.yml
+
+*.xlsx
+*.csv
+*.json
+
+__pycache__/
+*.pyc
+.venv/
+
+.DS_Store
+thumbs.db
+
