--- a/.github/workflows/dbt_pipeline.yml
+++ b/.github/workflows/dbt_pipeline.yml
@@ -1,5 +1,3 @@
-# .github/workflows/dbt_pipeline.yml
-
 name: dbt Snowflake Pipeline
 
 on:
@@ -10,7 +8,9 @@ on:
 
 jobs:
 
-  # ── JOB 1: Run on every Pull Request ────────────────────────────
+  # ─────────────────────────────────────────────
+  # JOB 1 — PR CHECK (DEV)
+  # ─────────────────────────────────────────────
   dbt-pr-check:
     name: "PR Check: dbt build on dev"
     runs-on: ubuntu-latest
@@ -28,7 +28,7 @@ jobs:
       - name: Install dbt-snowflake
         run: pip install dbt-snowflake
 
-      - name: Create profiles.yml
+      - name: Create profiles.yml (DEV)
         run: |
           mkdir -p ~/.dbt
           cat > ~/.dbt/profiles.yml << 'PROFILE'
@@ -50,10 +50,13 @@ jobs:
       - name: dbt deps
         run: dbt deps
 
-      - name: dbt build (includes run + test)
+      - name: dbt build (DEV)
         run: dbt build --target dev
 
-  # ── JOB 2: Deploy to prod on merge to main ───────────────────────
+
+  # ─────────────────────────────────────────────
+  # JOB 2 — DEPLOY TO PROD (MERGE TO MAIN)
+  # ─────────────────────────────────────────────
   dbt-deploy-prod:
     name: "Deploy: dbt build on prod"
     runs-on: ubuntu-latest
@@ -68,11 +71,11 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install dbt-snowflake and Snowflake CLI
+      - name: Install dbt and Snowflake CLI
         run: |
           pip install dbt-snowflake snowflake-cli-labs
 
-      - name: Create profiles.yml
+      - name: Create profiles.yml (PROD)
         run: |
           mkdir -p ~/.dbt
           cat > ~/.dbt/profiles.yml << 'PROFILE'
@@ -94,15 +97,25 @@ jobs:
       - name: dbt deps
         run: dbt deps
 
-      - name: dbt build (prod)
+      - name: dbt build (PROD)
         run: dbt build --target prod
 
+      # ✅ FIXED Snowflake CLI v3 Syntax
       - name: Refresh Snowflake Git repo
+        env:
+          SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
+          SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
+          SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
+          SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
+          SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
+          SNOWFLAKE_PROD_DB: ${{ secrets.SNOWFLAKE_PROD_DB }}
         run: |
           snow sql \
-            -q "ALTER GIT REPOSITORY DBT_DEV_DB.INTEGRATIONS.DBT_GIT_REPO FETCH" \
-            --temporary-connection \
-            --account ${{ secrets.SNOWFLAKE_ACCOUNT }} \
-            --user ${{ secrets.SNOWFLAKE_USER }} \
-            --password ${{ secrets.SNOWFLAKE_PASSWORD }} \
-            --role ${{ secrets.SNOWFLAKE_ROLE }}
+            -a $SNOWFLAKE_ACCOUNT \
+            -u $SNOWFLAKE_USER \
+            -p $SNOWFLAKE_PASSWORD \
+            -r $SNOWFLAKE_ROLE \
+            -w $SNOWFLAKE_WAREHOUSE \
+            -d $SNOWFLAKE_PROD_DB \
+            -s INTEGRATIONS \
+            -q "ALTER GIT REPOSITORY DBT_DEV_DB.INTEGRATIONS.DBT_GIT_REPO FETCH"
